select all employee function added

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,12 +50,36 @@
               <p>John Doe</p> -->
               <div class="mini-menu">
                 <ul>
-                  <li>Edit Profile</li>
-                  <li>Settings </li>
+                  <li class="edit-profile">Account Settings</li>
                   <li><a href="/logout" type="button">Logout</a></li>
                 </ul>
               </div>
             </div>
+
+            <div class="modal-content-edit">
+              <!-- <div class="menu-profile"></div>
+                          <p>John Doe</p> -->
+              <div class="mini-menu-edit">
+                  <img src="/static/assets/img/no-profile.png">
+                  <input type="button" value="Change Profile">
+                  <p>Account Information:</p>
+                  <div class="menu-wrapper">
+                    <div class="menu-box1">
+                      <label>Name:</label>
+                      <label>Old Password:</label>
+                      <label>New Password:</label>
+                      <label>Repeat Password:</label>
+                    </div>
+                    <div class="menu-box2">
+                      <input type="text" id="username" value="John">
+                      <input type="password" id="oldPassword" value="password">
+                      <input type="password" id="newPassword" value="">
+                      <input type="password" id="repeatPassword" value="">
+                    </div>
+                  </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </nav>
