--- a/templates/employee-list.html
+++ b/templates/employee-list.html
@@ -19,12 +19,14 @@
 <main class="emplist-container">
   <div class="emplist">
     <h1>Employee List</h1>
+    <button>Add</button>
     <input>
   </div>
   <div class="emplist-wrapper">
     <div class="emplist-box1">
       <table class="emplist-table">
         <tr class="table-head">
+          <th><input class="selectAll"  type="checkbox"></th>
           <th>ID</th>
           <th>Employee Name</th>
           <th>Department</th>
@@ -32,6 +34,7 @@
           <th>Contact</th>
         </tr>
         <tr class="table-content">
+          <td><input class="select"   type="checkbox"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -39,6 +42,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select"  type="checkbox"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -46,6 +50,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -53,6 +58,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -60,6 +66,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -67,6 +74,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -74,6 +82,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -81,6 +90,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -88,6 +98,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -95,6 +106,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -102,6 +114,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -109,6 +122,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -116,6 +130,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -123,6 +138,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -130,6 +146,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -137,6 +154,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -144,6 +162,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -151,6 +170,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -158,6 +178,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -165,6 +186,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -172,6 +194,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
@@ -179,104 +202,7 @@
           <td>1234567899</td>
         </tr>
         <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="table-content">
-          <td>000001</td>
-          <td>John Doe</td>
-          <td>Department of Energy</td>
-          <td>Manager</td>
-          <td>1234567899</td>
-        </tr>
-        <tr class="table-content">
+          <td><input class="select" type="checkbox" value="Edit"></td>
           <td>000001</td>
           <td>John Doe</td>
           <td>Department of Energy</td>
