--- a/static/css/style.css
+++ b/static/css/style.css
@@ -182,7 +182,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 10rem;
+  width: 12rem;
 }
 
 .mini-menu>ul {
@@ -200,6 +200,55 @@
 
 .mini-menu>ul>li>a:hover, .mini-menu>ul>li:hover {
   color: #E40813;
+}
+
+.modal-content-edit {
+  background-color: #fefefe;
+  border: 1px solid #888;
+  padding: 1rem;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 20rem;
+  width: 25rem;
+}
+
+.mini-menu-edit {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.menu-box2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 5px;
+}
+
+.menu-box2>input {
+  padding-left: 5px;
+}
+
+.menu-box1 {
+  display: flex;
+  gap: 8px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.menu-box1>label {
+  font-size: 18px;
+}
+
+.menu-wrapper {
+  display: flex;
+  gap: 5px;
+  padding: 1rem;
 }
 
 .wrapper2 {
@@ -398,13 +447,33 @@
   text-align: center;
 }
 
+.table-content > td > img {
+  width: 30px;
+  height: 30px;
+}
+
 .table-content > td {
   width: 20%;
   height: 40px;
 }
 
+tr:nth-child(even).active {
+  background-color: #d3d3d3;
+}
+
 tr:nth-child(even) {
   background-color: #fff0ee;
+}
+
+th:last-child {
+  padding-right: 1rem;
+}
+
+td:last-child {
+  padding-right: 1rem;
+}
+.active{
+  background-color: #d3d3d3; 
 }
 
 /* EMPLOYEE LIST */
