--- a/templates/payroll.html
+++ b/templates/payroll.html
@@ -2,19 +2,6 @@
 <title>{{.Title}}</title>
 {{end}}
 {{define "content"}}
-<!-- <div class="">
-  <div class="">
-    <div>
-      <h1 class=""><strong>Payroll.</strong></h1>
-      <p><a href="/system/payroll">Go to Payroll</a></p>
-      <p><a href="/system/dashboard">Go to Dashboard</a></p>
-      <p><a href="/system/employee-list">Go to Employee List</a></p>
-      <p><a href="/system/time-sheet">Go to Time Sheet</a></p>
-
-
-    </div>
-  </div>
-</div> -->
 
 <main class="pr-container">
   <div class="pr">
@@ -23,16 +10,114 @@
   </div>
   <div class="pr-wrapper">
     <div class="pr-box1">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <div class="pr-box2">
-      <div></div>
-      <div></div>
-    </div>
-    <div class="pr-box3">
-      <div></div>
+      <table class="pr-table">
+        <tr class="table-head">
+          <th>ID</th>
+          <th>Employee Name</th>
+          <th>Status</th>
+          <th>Position</th>
+          <th>Rate/Hr</th>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+        <tr class="table-content">
+          <td>000001</td>
+          <td>John Doe</td>
+          <td>Active</td>
+          <td>Software Developer</td>
+          <td>₱ 500.00</td>
+        </tr>
+       
+      </table>
     </div>
   </div>
 </main>
