--- a/static/css/employee-list.css
+++ b/static/css/employee-list.css
@@ -1,5 +1,38 @@
 /* EMPLOYEE LIST */
 
+#myInput {
+  background-image: url("static/assets/img/search.png"); /* Add a search icon to input */
+  background-repeat: no-repeat; /* Do not repeat the icon image */
+  width: 30rem; /* Full-width */
+  font-size: 16px; /* Increase font-size */
+  padding: 12px 20px 12px 40px; /* Add some padding */
+  border: 1px solid #ddd; /* Add a grey border */
+  margin-bottom: 12px; /* Add some space below the input */
+}
+
+#employee-table {
+  border-collapse: collapse; /* Collapse borders */
+  width: 100%; /* Full-width */
+  height: 70px;
+  border: 1px solid #ddd; /* Add a grey border */
+  font-size: 18px; /* Increase font-size */
+}
+
+#employee-table th, #employee-table td {
+  text-align: left; /* Left-align text */
+  padding: 12px; /* Add padding */
+}
+
+#employee-table tr {
+  /* Add a bottom border to all table rows */
+  border-bottom: 1px solid #ddd;
+}
+
+#employee-table tr.table-head, #employee-table tr:hover {
+  /* Add a grey background color to the table header and on hover */
+  background-color: #e2dcdc;
+}
+
 .emplist-container {
   width: 100%;
   padding: 2rem;
@@ -16,9 +49,11 @@
   position: relative;
 }
 
-.emplist>input {
-  width: 20rem;
-  height: 1.5rem;
+#add-employee {
+  padding: 2px;
+  background-color: green;
+  margin-bottom: 12px;
+  color: #ddd;
 }
 
 .emplist-wrapper {
@@ -37,62 +72,6 @@
   overflow-y: scroll;
 }
 
-.emplist-table {
-  width: 100%;
-  height: 100%;
-  border-collapse: collapse;
-}
 
-.table-head {
-  width: 10rem;
-  height: 20px;
-}
-
-.table-head>th {
-  width: 20%;
-  height: 20px;
-  border-bottom: solid 1px black;
-}
-
-.table-content {
-  width: 100%;
-  height: 20px;
-  text-align: center;
-}
-
-.table-content>td>img {
-  width: 30px;
-  height: 30px;
-}
-
-.table-content>td {
-  width: 20%;
-  height: 40px;
-}
-
-tr:nth-child(even).active {
-  background-color: #d3d3d3;
-}
-
-tr:nth-child(even) {
-  background-color: #fff0ee;
-}
-
-th:last-child {
-  padding-right: 1rem;
-}
-
-td:last-child {
-  padding-right: 1rem;
-}
-
-.active {
-  background-color: #d3d3d3;
-}
-
-.emplist-table input {
-  height: 20px;
-  width: 20px;
-}
 
 /* EMPLOYEE LIST */
