--- a/templates/employee-list.html
+++ b/templates/employee-list.html
@@ -7,7 +7,7 @@
   <div class="emplist">
     <h1>Employee List</h1>
     <button id="add-employee">Add Employee</button>
-    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for Employee Name..">
+    <input type="text" id="employeeList" onkeyup="myFunction()" placeholder="Search for Employee Name..">
   </div>
   <div class="emplist-wrapper">
     <div class="emplist-box1">
