--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="login-container">
-    <div class="login-wrapper">
+    <div class="login-wrapper primary-bg">
       <div class="login-logo">
         <img src="/static/assets/img/integritynet-logo.png">
       </div>
